[package]
name = "proxyholder"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.1"
hyper = "1.3.1"
hyper-rustls = "0.27.1"
hyper-util = { version = "0.1.3", features = ["tokio", "full"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
